--- a/templates/home.html
+++ b/templates/home.html
@@ -8,9 +8,10 @@
 			<option value="2">동사 (verb)</option>
 			<option value="3">형용사 (adjective)</option>
 			<option value="4">부사 (adverb)</option>
-			<option value="5">전치사 (proposition)</option>
+			<option value="5">전치사 (preposition)</option>
 			<option value="6">접속사 (conjuction)</option>
 			<option value="7">감탄사 (interjection)</option>
+			<option value="8">표현 (expression)</option>
 		</select>
 	</div>
 	<div class="option">
