--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -7,7 +7,7 @@
 				<td><input class="form-control input-sm" type="number" min="10" max="50" placeholder="20" ng-click="showQuizNotif = 0" ng-model="quizOption1"></td>
 			</tr>
 			<tr>
-				<td>Part of Speech</td>
+				<td>Category</td>
 				<td>
 					<select class="form-control input-sm" ng-click="showQuizNotif = 0" ng-model="quizOption2">
 						<option value="All" ng-selected="1">All</option>
@@ -16,9 +16,10 @@
 						<option value="2">동사 (verb)</option>
 						<option value="3">형용사 (adjective)</option>
 						<option value="4">부사 (adverb)</option>
-						<option value="5">전치사 (proposition)</option>
+						<option value="5">전치사 (preposition)</option>
 						<option value="6">접속사 (conjuction)</option>
 						<option value="7">감탄사 (interjection)</option>
+						<option value="8">표현 (expression)</option>
 					</select>
 				</td>
 			</tr>
