--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,15 +1,24 @@
 <div id="signin-wrapper">
-	<form class="form-inline" ng-submit="signin()">
+	<form class="form" ng-submit="signin()">
+		<div class="form-group">
+			<label for="user">User</label>
+			<select id="user" class="form-control" ng-model="pcObj.user" ng-click="showSignInNotif = 0" required>
+				<option value="marti">Marti</option>
+				<option value="master">Master</option>
+				<option value="guest">Guest</option>
+			</select>
+		</div>
 		<div class="form-group">
 			<label for="passcode">Passcode</label>
-			<input type="password" class="form-control" id="passcode" ng-model="passcode" ng-click="showSignInNotif = 0" required>
+			<input type="password" class="form-control" id="passcode" ng-model="pcObj.passcode" ng-click="showSignInNotif = 0" required>
 		</div>
 		<button type="submit" class="btn btn-default">Sign In</button>
+		<button type="button" class="btn btn-default" ng-click="guest()">Guest</button>
 	</form>
 	<div id="signin-notification" ng-show="showSignInNotif">
 		<div class="alert alert-danger">
 			{{notifMessage}}
 		</div>
 	</div>
-</div>
 
+</div>
