--- a/templates/wordbank.html
+++ b/templates/wordbank.html
@@ -8,7 +8,7 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="control-label col-sm-3">Part of Speech</label>
+				<label class="control-label col-sm-3">Category</label>
 				<div class="col-sm-9">
 					<select class="form-control" ng-click="showNotif = 0; showSuccess = 0; showFail = 0;" ng-model="KOR.part" required>
 						<option value="0">명사(noun)</option>
@@ -16,9 +16,10 @@
 						<option value="2">동사(verb)</option>
 						<option value="3">형용사(adjective)</option>
 						<option value="4">부사(adverb)</option>
-						<option value="5">전치사(proposition)</option>
+						<option value="5">전치사(preposition)</option>
 						<option value="6">접속사(conjuction)</option>
 						<option value="7">감탄사(interjection)</option>
+						<option value="8">표현 (expression)</option>
 					</select>
 				</div>
 			</div>
